--- a/bin/build
+++ b/bin/build
@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-clean && . helpers && check_format && init && build_all
+clean && . helpers && check_format && review && init && build_all
